@@ -1927,6 +1927,7 @@ validate.pointNotSettable=Point not settable
 validate.pointWrontType=Point is wrong type
 validate.invalidReference=Invalid XID Reference
 validate.incompatibleDataSourceType=Data Source Type Incompatible
+validate.invalidPermissionWithSpace=Permission cannot contain space: {0}
 validate.invalidPermission=Cannot add permission that you do not already have: {0}
 validate.invalidPermissionModification=Cannot add or remove a permissions you do not have. You have: {0}
 validate.mustHaveEditPermission=Must retain edit permission
